--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
-Flask-SQLAlchemy==2.3.2
 Flask-Script==2.0.6
 Jinja2==2.10
 MarkupSafe==1.0
@@ -12,3 +11,4 @@ pip==9.0.3
 setuptools==39.0.1
 visitor==0.1.3
 wheel==0.31.0
+pymongo==3.6.1
